--- a/package.json
+++ b/package.json
@@ -30,15 +30,15 @@
     "webpack": "^5.54.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.0",
-    "webpack-node-externals": "^3.0.0"
-  },
-  "dependencies": {
+    "webpack-node-externals": "^3.0.0",
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
+    "nodemon": "^2.0.13"
+  },
+  "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
