--- a/package.json
+++ b/package.json
@@ -20,27 +20,27 @@
   },
   "homepage": "https://github.com/artemlaptev63/react-skillbox#readme",
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.15.0",
     "@hot-loader/react-dom": "^17.0.1",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
-    "babel": "^6.23.0",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^4.0.0",
-    "html-webpack-plugin": "^5.3.2",
-    "nodemon": "^2.0.13",
+    "@types/jest": "^25.1.4",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "3.4.2",
+    "enzyme": "^3.11.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^25.1.0",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
+    "nodemon": "^2.0.6",
     "react-hot-loader": "^4.13.0",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.4.3",
-    "webpack": "^5.54.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-middleware": "^5.2.1",
-    "webpack-dev-server": "^4.3.0",
-    "webpack-hot-middleware": "^2.25.1",
-    "webpack-node-externals": "^3.0.0"
+    "style-loader": "1.1.3",
+    "ts-jest": "^25.2.1",
+    "ts-loader": "^8.0.13",
+    "typescript": "^4.1.3",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^4.3.1",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-server": "^3.11.1",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
     "express": "^4.17.1",
