--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/artemlaptev63/react-skillbox#readme",
   "devDependencies": {
+    "@types/react": "^17.0.26",
+    "@types/react-dom": "^17.0.9",
     "@hot-loader/react-dom": "^17.0.1",
     "@types/jest": "^25.1.4",
     "clean-webpack-plugin": "^3.0.0",
