--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "env NODE_ENV=development node ./bin/dev.js",
     "build:dev": "env NODE_ENV=development webpack --config webpack.config.js",
     "build:prod": "env NODE_ENV=production webpack --config webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,13 +20,17 @@
   },
   "homepage": "https://github.com/artemlaptev63/react-skillbox#readme",
   "devDependencies": {
+    "@hot-loader/react-dom": "^17.0.1",
+    "@types/classnames": "^2.3.1",
+    "@types/enzyme": "3.10.5",
+    "@types/jest": "^25.1.4",
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
-    "@hot-loader/react-dom": "^17.0.1",
-    "@types/jest": "^25.1.4",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "3.4.2",
     "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "1.15.6",
+    "enzyme-to-json": "^3.6.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
     "less": "^3.11.1",
@@ -45,8 +49,9 @@
     "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "express": "^4.17.1",
-    "react": "^17.0.2",
+    "react": "^16.0.2",
     "react-dom": "^17.0.2"
   }
 }
