--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
+    "axios": "^0.22.0",
     "classnames": "^2.3.1",
     "express": "^4.17.1",
     "react": "^16.0.2",
