--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.22.0",
     "classnames": "^2.3.1",
     "express": "^4.17.1",
     "react": "^16.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5"
   }
 }
