--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
     "enzyme-to-json": "^3.6.2",
+    "formik": "^2.2.9",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
     "less": "^3.11.1",
