--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "env NODE_ENV=development CLIENT_ID=qvB2EedWRtWaEXnytfvr9A node ./bin/dev.js",
     "build:dev": "env NODE_ENV=development webpack --config webpack.config.js",
     "build:prod": "env NODE_ENV=production webpack --config webpack.config.js",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -20,12 +22,20 @@
   },
   "homepage": "https://github.com/artemlaptev63/react-skillbox#readme",
   "devDependencies": {
+    "@babel/core": "^7.15.8",
     "@hot-loader/react-dom": "^17.0.1",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^6.3.12",
     "@types/classnames": "^2.3.1",
     "@types/enzyme": "3.10.5",
     "@types/jest": "^25.1.4",
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
+    "@types/react-window": "^1.8.5",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "3.4.2",
     "enzyme": "^3.11.0",
@@ -38,6 +48,7 @@
     "less-loader": "^5.0.0",
     "nodemon": "^2.0.6",
     "react-hot-loader": "^4.13.0",
+    "sass-loader": "^12.2.0",
     "style-loader": "1.1.3",
     "ts-jest": "^25.2.1",
     "ts-loader": "^8.0.13",
@@ -56,6 +67,7 @@
     "express": "^4.17.1",
     "react": "^16.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.5"
+    "react-redux": "^7.2.5",
+    "react-window": "^1.8.6"
   }
 }
