--- a/package.json
+++ b/package.json
@@ -62,12 +62,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
+    "@types/react-router-dom": "^5.3.1",
     "axios": "^0.22.0",
     "classnames": "^2.3.1",
     "express": "^4.17.1",
     "react": "^16.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-window": "^1.8.6"
   }
 }
