--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "dev": "env NODE_ENV=development CLIENT_ID=qvB2EedWRtWaEXnytfvr9A node ./bin/dev.js",
     "build:dev": "env NODE_ENV=development webpack --config webpack.config.js",
-    "build:prod": "env NODE_ENV=production webpack --config webpack.config.js",
+    "build": "env NODE_ENV=production webpack --config webpack.config.js",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "start": "node ./dist/server/server.js"
   },
   "repository": {
     "type": "git",
@@ -21,7 +25,18 @@
     "url": "https://github.com/artemlaptev63/react-skillbox/issues"
   },
   "homepage": "https://github.com/artemlaptev63/react-skillbox#readme",
-  "devDependencies": {
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
+    "@types/react-router-dom": "^5.3.1",
+    "axios": "^0.22.0",
+    "classnames": "^2.3.1",
+    "express": "^4.17.1",
+    "react": "^16.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
+    "react-window": "^1.8.6",
     "@babel/core": "^7.15.8",
     "@hot-loader/react-dom": "^17.0.1",
     "@storybook/addon-actions": "^6.3.12",
@@ -59,18 +74,5 @@
     "webpack-dev-server": "^3.11.1",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-node-externals": "^2.5.2"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.6.2",
-    "@types/react-router-dom": "^5.3.1",
-    "axios": "^0.22.0",
-    "classnames": "^2.3.1",
-    "express": "^4.17.1",
-    "react": "^16.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.5",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
-    "react-window": "^1.8.6"
   }
 }
