--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "node": "14.x"
   },
   "scripts": {
-    "dev": "env NODE_ENV=development CLIENT_ID=qvB2EedWRtWaEXnytfvr9A node ./bin/dev.js",
+    "dev": "env NODE_ENV=development REDIRECT_URI=http://localhost:3000/auth/ CLIENT_ID=qvB2EedWRtWaEXnytfvr9A SECRET=pJzolKzy9-9pMihIMzQGPz1mPGKXWg node ./bin/dev.js",
     "build:dev": "env NODE_ENV=development webpack --config webpack.config.js",
     "build": "env NODE_ENV=production webpack --config webpack.config.js",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "start": "node ./dist/server/server.js"
+    "start": "env CLIENT_ID=G1MvCeRTHmRXOvsAKedW3A REDIRECT_URI=https://react-skillbox-63.herokuapp.com/auth/ SECRET=xsnoK7g2KYkkGvF22DcHuZCsr73AAw node ./dist/server/server.js"
   },
   "repository": {
     "type": "git",
