--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "node": "14.x"
   },
   "scripts": {
-    "dev": "env NODE_ENV=development REDIRECT_URI=http://localhost:3000/auth/ CLIENT_ID=qvB2EedWRtWaEXnytfvr9A SECRET=pJzolKzy9-9pMihIMzQGPz1mPGKXWg node ./bin/dev.js",
-    "build:dev": "env NODE_ENV=development webpack --config webpack.config.js",
-    "build": "env NODE_ENV=production webpack --config webpack.config.js",
+    "dev": "cross-env NODE_ENV=development REDIRECT_URI=http://localhost:3000/auth/ CLIENT_ID=qvB2EedWRtWaEXnytfvr9A SECRET=pJzolKzy9-9pMihIMzQGPz1mPGKXWg node ./bin/dev.js",
+    "build:dev": "cross-env NODE_ENV=development webpack --config webpack.config.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "start": "env CLIENT_ID=G1MvCeRTHmRXOvsAKedW3A REDIRECT_URI=https://react-skillbox-63.herokuapp.com/auth/ SECRET=xsnoK7g2KYkkGvF22DcHuZCsr73AAw node ./dist/server/server.js"
+    "start": "cross-env CLIENT_ID=G1MvCeRTHmRXOvsAKedW3A REDIRECT_URI=https://react-skillbox-63.herokuapp.com/auth/ SECRET=xsnoK7g2KYkkGvF22DcHuZCsr73AAw node ./dist/server/server.js"
   },
   "repository": {
     "type": "git",
@@ -26,19 +26,9 @@
   },
   "homepage": "https://github.com/artemlaptev63/react-skillbox#readme",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.2",
-    "@types/react-router-dom": "^5.3.1",
-    "axios": "^0.22.0",
-    "classnames": "^2.3.1",
-    "express": "^4.17.1",
-    "react": "^16.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.5",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
-    "react-window": "^1.8.6",
     "@babel/core": "^7.15.8",
     "@hot-loader/react-dom": "^17.0.1",
+    "@reduxjs/toolkit": "^1.6.2",
     "@storybook/addon-actions": "^6.3.12",
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
@@ -49,20 +39,31 @@
     "@types/jest": "^25.1.4",
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.1",
     "@types/react-window": "^1.8.5",
+    "axios": "^0.22.0",
     "babel-loader": "^8.2.2",
+    "classnames": "^2.3.1",
     "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "3.4.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
     "enzyme-to-json": "^3.6.2",
+    "express": "^4.17.1",
     "formik": "^2.2.9",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "nodemon": "^2.0.6",
+    "react": "^16.0.2",
+    "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
+    "react-redux": "^7.2.5",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
+    "react-window": "^1.8.6",
     "sass-loader": "^12.2.0",
     "style-loader": "1.1.3",
     "ts-jest": "^25.2.1",
