--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-loader": "^8.2.2",
     "classnames": "^2.3.1",
     "clean-webpack-plugin": "^3.0.0",
+    "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "css-loader": "3.4.2",
     "enzyme": "^3.11.0",
@@ -52,6 +53,7 @@
     "enzyme-to-json": "^3.6.2",
     "express": "^4.17.1",
     "formik": "^2.2.9",
+    "helmet": "^4.6.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
     "less": "^3.11.1",
