--- a/package.json
+++ b/package.json
@@ -29,11 +29,6 @@
     "@babel/core": "^7.15.8",
     "@hot-loader/react-dom": "^17.0.1",
     "@reduxjs/toolkit": "^1.6.2",
-    "@storybook/addon-actions": "^6.3.12",
-    "@storybook/addon-essentials": "^6.3.12",
-    "@storybook/addon-links": "^6.3.12",
-    "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.3.12",
     "@types/classnames": "^2.3.1",
     "@types/enzyme": "3.10.5",
     "@types/jest": "^25.1.4",
@@ -65,7 +60,6 @@
     "react-redux": "^7.2.5",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
-    "react-window": "^1.8.6",
     "sass-loader": "^12.2.0",
     "style-loader": "1.1.3",
     "ts-jest": "^25.2.1",
@@ -77,5 +71,12 @@
     "webpack-dev-server": "^3.11.1",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-node-externals": "^2.5.2"
+  },
+  "devDependencies": {
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^6.3.12"
   }
 }
