--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development REDIRECT_URI=http://localhost:3000/auth/ CLIENT_ID=qvB2EedWRtWaEXnytfvr9A SECRET=pJzolKzy9-9pMihIMzQGPz1mPGKXWg node ./bin/dev.js",
-    "build:dev": "cross-env NODE_ENV=development webpack --config webpack.config.js",
+    "build:dev": "cross-env NODE_ENV=development REDIRECT_URI=http://localhost:3000/auth/ CLIENT_ID=qvB2EedWRtWaEXnytfvr9A SECRET=pJzolKzy9-9pMihIMzQGPz1mPGKXWg webpack --config webpack.config.js",
     "build": "cross-env CLIENT_ID=G1MvCeRTHmRXOvsAKedW3A REDIRECT_URI=https://react-skillbox-63.herokuapp.com/auth/ SECRET=xsnoK7g2KYkkGvF22DcHuZCsr73AAw NODE_ENV=production webpack --config webpack.config.js",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
@@ -43,6 +43,7 @@
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "css-loader": "3.4.2",
+    "easy-peasy": "^5.0.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
     "enzyme-to-json": "^3.6.2",
